--- a/index.html
+++ b/index.html
@@ -34,8 +34,10 @@
     .blue-dot {
       width: 16px;
       height: 16px;
-      background-color: blue;
+      background-color: rgba(0, 0, 255, 0.5); /* 바깥 부분의 반투명 파란색 배경 */
+      border: 2px solid white; /* 흰색 테두리 */
       border-radius: 50%;
+      box-shadow: 0 0 0 6px rgba(0, 0, 255, 0.25); /* 바깥 광역 파란 배경 효과 */
       visibility: hidden;
       opacity: 0;
       transition: visibility 0s, opacity 0.3s ease-in-out;
