--- a/index.html
+++ b/index.html
@@ -32,12 +32,14 @@
     }
 
     .blue-dot {
-      width: 12px;
-      height: 12px;
-      background-color: rgba(0, 0, 255, 0.5); /* 바깥 부분의 반투명 파란색 배경 */
+      width: 16px;
+      height: 16px;
+      background-color: rgba(0, 0, 255, 0.6); /* 중심 원 배경: 반투명 파란색 */
       border: 2px solid white; /* 흰색 테두리 */
       border-radius: 50%;
-      box-shadow: 0 0 0 6px rgba(0, 0, 255, 0.25); /* 바깥 광역 파란 배경 효과 */
+      box-shadow:
+        0 0 0 6px rgba(0, 0, 255, 0.25),  /* 바깥 영역 */
+        0 0 12px 4px rgba(0, 0, 255, 0.5); /* 파란 빛나는 glow 효과 */
       visibility: hidden;
       opacity: 0;
       transition: visibility 0s, opacity 0.3s ease-in-out;
