--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
     .blue-dot {
       width: 10px;
       height: 10px;
-      background-color: rgba(0, 0, 255, 0.3); /* 중심 원 배경: 반투명 파란색 */
-      border: 2px solid white; /* 흰색 테두리 */
+      background-color: rgba(0, 0, 255, 0.4); /* 중심 원 색상 */
+      border: 2px solid white;
       border-radius: 50%;
       box-shadow:
-        0 0 8 4px rgba(0, 0, 255, 0.3),  /* 바깥 영역 */
-        0 0 16px 8px rgba(0, 0, 255, 0.15); /* 파란 빛나는 glow 효과 */
+        0 0 10px 5px rgba(0, 0, 255, 0.3),
+        0 0 30px 15px rgba(0, 0, 255, 0.2);
       visibility: hidden;
       opacity: 0;
       transition: visibility 0s, opacity 0.3s ease-in-out;
