--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       border-radius: 12px;
       padding: 10px 14px;
       box-shadow: 0 4px 12px rgba(0,0,0,0.15);
-      color: #333;
+      color:#448e7a;
       font-weight: 600;
       font-size: 1em;
       text-align: center;
@@ -144,10 +144,13 @@
   });
 
   const markers = [
-    { lng: 126.79009, lat: 37.50089, img: 'st1.png', title: '해봄정원', url: 'https://botanicpark.seoul.go.kr/front/main.do' },
-    { lng: 126.79139, lat: 37.50200, img: 'on1.png', title: '식물문화센터' },
-    { lng: 126.78976, lat: 37.50240, img: 'gold1.png', title: '거인의 정원' },
-    { lng: 126.78835, lat: 37.50166, img: 'ct1.png', title: '판매온실' }
+    { lng: 126.79009, lat: 37.50089, img: 'cns1.png', title: '도시와 자연의 노래<br>푸른꿈의 정원', url: 'https://botanicpark.seoul.go.kr/front/main.do' },
+    { lng: 126.79139, lat: 37.50200, img: 'cns2.png', title: '도시와 자연의 노래<br>맞이정원' },
+    { lng: 126.78976, lat: 37.50240, img: 'cs1.png', title: '도시의 하늘정원<br>구름정원' },
+    { lng: 126.78835, lat: 37.50166, img: 'cs2.png', title: '도시의 하늘정원<br>해봄정원' }
+    { lng: 126.79242, lat: 37.50066, img: 'lw1.png', title: '살아 있는 벽의 노래<br>기업쇼륨' },
+    { lng: 126.78995, lat: 37.49911, img: 'lw2.png', title: '살이 있는 벽의 노래<br>바이오월 페어' },
+    { lng: 126.78962, lat: 37.50340, img: 'hd1.png', title: '숨겨진 오아시스<br>베란다 정원' }
   ];
 
   markers.forEach(m => {
