--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
     { lng: 126.78835, lat: 37.50166, img: 'cs2.png', title: '도시의 하늘정원<br>해봄정원' },
     { lng: 126.79242, lat: 37.50066, img: 'lw1.png', title: '살아 있는 벽의 노래<br>기업쇼륨' },
     { lng: 126.78995, lat: 37.49911, img: 'lw2.png', title: '살이 있는 벽의 노래<br>바이오월 페어' },
-    { lng: 126.78962, lat: 37.50340, img: 'hd1.png', title: '숨겨진 오아시스<br>베란다 정원' }
+    { lng: 126.78962, lat: 37.50340, img: 'ho1.png', title: '숨겨진 오아시스<br>베란다 정원' }
   ];
 
   markers.forEach(m => {
