--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
     .user-marker-inner {
       width: 130px;
       height: 130px;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
     }
 
     .blue-dot {
