--- a/index.html
+++ b/index.html
@@ -176,18 +176,26 @@
     blueDotMarkers.push(blueDot);
 
     el.addEventListener('click', () => {
-      if (fixedPopup) fixedPopup.remove(); // 기존 클릭 팝업 제거
+      if (currentPopup && currentPopup._lngLat.lng === m.lng && currentPopup._lngLat.lat === m.lat) {
+        currentPopup.remove();
+        currentPopup = null;
+      }
+      if (fixedPopup) fixedPopup.remove();
       const html = `<div class="popup-content" ${m.url ? `onclick="window.open('${m.url}', '_blank')"` : ''}>${m.title}</div>`;
-      fixedPopup = new mapboxgl.Popup({ offset: [0, -70] })
+      fixedPopup = new mapboxgl.Popup({ offset: [0, -90] })
         .setLngLat([m.lng, m.lat])
         .setHTML(html)
         .addTo(map);
     });
     
     el.addEventListener('touchstart', () => {
-      if (fixedPopup) fixedPopup.remove(); // 터치 이벤트에도 동일 처리
+      if (currentPopup && currentPopup._lngLat.lng === m.lng && currentPopup._lngLat.lat === m.lat) {
+        currentPopup.remove();
+        currentPopup = null;
+      }
+      if (fixedPopup) fixedPopup.remove();
       const html = `<div class="popup-content" ${m.url ? `onclick="window.open('${m.url}', '_blank')"` : ''}>${m.title}</div>`;
-      fixedPopup = new mapboxgl.Popup({ offset: [0, -70] })
+      fixedPopup = new mapboxgl.Popup({ offset: [0, -90] })
         .setLngLat([m.lng, m.lat])
         .setHTML(html)
         .addTo(map);
